Thu Jan  3 17:23:58 PST 2008 (adam) - Release 0.60
  Updated my contact information.
  Prepped for release.

Thu Jan  3 19:42:16 EST 2008 
	Fixed RT#30498 - REST controller references Catalyst without
	  loading it first.
	Fixed RT#32042 - Import of Params::Validate :all plays badly
	  with subclasses that have their own validate()
	Fixed RT#30456 - Debug messages print even with debugging disabled

Thu Jan  3 08:54:09 PST 2008
	Fixed an issue where YAML::Syck versions 0.92 require $c->request->body to
	  be stringified

Fri Dec 21 15:23:46 EDT 2007 
	Updated the configuration specifiers to operate more in line with the way
	Catalyst expects.  Most notably component based configuration through
	"Controller::RestClass" now works.  "serialize" at the top level simply
	is suggested defaults that all REST classes inherit.

Wed Jul 04 11:17:20 EDT 2007
	Fixed 'default' serializer to set a valid Content-Type: header.  Fixes
	RT ticket 27949.  Note that behavior has changed -- the default
	serializer must now be specified as a content-type, not as a plugin
	name. (dmo@roaringpenguin.com)

Thu May 24 14:01:06 PDT 2007 (adam) - Release 0.41
	Moved a bogus $self->class to $c->component($self->class)

Fri Mar  9 14:13:29 PST 2007 (adam) - Release 0.40
	Refactored the Content-Type negotiation to live in Catalyst::Request::REST.  (drolsky)
  	Added some useful debugging. (drolsky)
	Added a View serializer/deserializer, which simply calls the correct
	Catalyst view.  ('text/html' => [ 'View', 'TT' ]) (claco, adam)

Wed Dec  6 00:45:02 PST 2006 (adam) - Release 0.31
	Fixed a bug where we would report a blank content-type negotiation.
	Added Data::Dump as a dependency.

Tue Dec  5 13:02:08 PST 2006 (adam)
	Made the YAML::HTML view automatically append content-type=text/html on
	  the resulting URLs.

Sun Dec  3 12:24:16 PST 2006 (adam) - Release 0.30
	Updated the Makefile to support optional installation of the different
	  Serialization formats.