@@ -1,3 +1,5 @@
+  Support official application/json and carp about text/x-json
+
 Thu Jan  3 17:23:58 PST 2008 (adam) - Release 0.60
   Updated my contact information.
   Prepped for release.
